@@ -2,7 +2,7 @@
 #
 # Python-bindings open close testing script
 #
-# Copyright (C) 2009-2014, Joachim Metz <joachim.metz@gmail.com>
+# Copyright (c) 2009-2014, Joachim Metz <joachim.metz@gmail.com>
 #
 # Refer to AUTHORS for acknowledgements.
 #
@@ -23,6 +23,40 @@
 EXIT_SUCCESS=0;
 EXIT_FAILURE=1;
 EXIT_IGNORE=77;
+
+list_contains()
+{
+	LIST=$1;
+	SEARCH=$2;
+
+	for LINE in $LIST;
+	do
+		if test $LINE = $SEARCH;
+		then
+			return ${EXIT_SUCCESS};
+		fi
+	done
+
+	return ${EXIT_FAILURE};
+}
+
+test_open_close()
+{ 
+	INPUT_FILE=$1;
+
+	rm -rf tmp;
+	mkdir tmp;
+
+	echo "Testing open close of input: ${INPUT_FILE}";
+
+	PYTHONPATH=../pymsiecf/.libs/ ${PYTHON} pymsiecf_test_open_close.py ${INPUT_FILE};
+
+	rm -rf tmp;
+
+	RESULT=$?;
+
+	return ${RESULT};
+}
 
 PYTHON="/usr/bin/python";
 
@@ -52,19 +86,36 @@ then
 
 	EXIT_RESULT=${EXIT_IGNORE};
 else
+	IGNORELIST="";
+
+	if test -f "input/.libmsiecf/ignore";
+	then
+		IGNORELIST=`cat input/.libmsiecf/ignore | sed '/^#/d'`;
+	fi
 	for TESTDIR in input/*;
 	do
 		if test -d "${TESTDIR}";
 		then
 			DIRNAME=`basename ${TESTDIR}`;
 
-			for TESTFILE in ${TESTDIR}/*;
-			do
-				if ! PYTHONPATH=../pymsiecf/.libs/ ${PYTHON} pymsiecf_test_open_close.py ${TESTFILE};
+			if ! list_contains "${IGNORELIST}" "${DIRNAME}";
+			then
+				if test -f "input/.libmsiecf/${DIRNAME}/files";
 				then
-					exit ${EXIT_FAILURE};
+					TEST_FILES=`cat input/.libmsiecf/${DIRNAME}/files | sed "s?^?${TESTDIR}/?"`;
+				else
+					TEST_FILES=`ls -1 ${TESTDIR}/* 2> /dev/null`;
 				fi
-			done
+				for TEST_FILE in ${TEST_FILES};
+				do
+					BASENAME=`basename ${TEST_FILE}`;
+
+					if ! test_open_close "${TEST_FILE}";
+					then
+						exit ${EXIT_FAILURE};
+					fi
+				done
+			fi
 		fi
 	done
 
