@@ -30,6 +30,7 @@ In progress:
 
 20141004
 * bug fix in Python-bindings
+* update Python-bindings tests
 
 20140930
 * removed README.macosx
